--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,6 @@ ipython_config.py
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
 # .python-version
-.solafuneenv
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -136,6 +135,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.solafuneenv/
 
 # Spyder project settings
 .spyderproject
@@ -174,3 +174,4 @@ cython_debug/
 # Data
 /evaluation_images
 /train_images
+/data
