--- a/requirements.txt
+++ b/requirements.txt
@@ -29,11 +29,11 @@ matplotlib-inline==0.1.7
 mpmath==1.3.0
 nest-asyncio==1.6.0
 networkx==3.4.2
-numpy==2.2.2
+numpy
 packaging==24.2
 parso==0.8.4
 pexpect==4.9.0
-pillow==11.1.0
+pillow
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
 psutil==6.1.1
@@ -45,7 +45,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pyzmq==26.2.1
 rasterio==1.4.3
-shapely==2.0.7
+shapely==2.0.3
 six==1.17.0
 stack-data==0.6.3
 sympy==1.13.1
@@ -55,5 +55,5 @@ tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.12.2
 wcwidth==0.2.13
+solafune_tools==0.6.0
 scikit-image
-solafune_tools
