--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,103 @@
 affine==2.4.0
+albucore==0.0.23
+albumentations==2.0.5
+annotated-types==0.7.0
 appnope==0.1.4
 asttokens==3.0.0
 attrs==25.1.0
 certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
 click-plugins==1.1.1
 cligj==0.7.2
+cloudpickle==3.1.1
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
+dask==2024.2.1
 debugpy==1.8.12
 decorator==5.1.1
 exceptiongroup==1.2.2
 executing==2.2.0
 filelock==3.17.0
+fiona==1.10.1
 fonttools==4.55.8
-fsspec==2025.2.0
+fsspec==2025.2.0 
+geopandas==0.14.3
+idna==3.10
+imageio==2.37.0
+importlib_metadata==8.6.1
 ipykernel==6.29.5
 ipython==8.31.0
 jedi==0.19.2
 Jinja2==3.1.5
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
+lazy_loader==0.4
+locket==1.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mpmath==1.3.0
 nest-asyncio==1.6.0
 networkx==3.4.2
-numpy
+numpy==1.26.4
+opencv-python-headless==4.11.0.86
 packaging==24.2
+pandas==2.2.3
 parso==0.8.4
+partd==1.4.2
 pexpect==4.9.0
-pillow
+Pillow==9.5.0
+planetary-computer==1.0.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
 psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==19.0.1
+pydantic==2.10.6
+pydantic_core==2.27.2
 Pygments==2.19.1
 pyparsing==3.2.1
+pyproj==3.7.1
+pystac==1.9.0
+pystac-client==0.7.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.1
+PyYAML==6.0.2
 pyzmq==26.2.1
 rasterio==1.4.3
+referencing==0.36.2
+requests==2.31.0
+rioxarray==0.15.1
+rpds-py==0.23.1
+scikit-image==0.24.0
+scipy==1.15.2
 shapely==2.0.3
+simsimd==6.2.1
 six==1.17.0
+solafune-tools==0.6.0
+stac_geoparquet==0.3.2
 stack-data==0.6.3
+stackstac==0.5.0
+stringzilla==3.12.5
 sympy==1.13.1
+tensorflow_keras==0.1
+tifffile==2025.2.18
+toolz==1.0.0
 torch==2.6.0
 torchvision==0.21.0
 tornado==6.4.2
+tqdm==4.66.2
 traitlets==5.14.3
 typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
 wcwidth==0.2.13
-solafune_tools==0.6.0
-scikit-image
-albumentations==2.0.5
+xarray==2025.1.2
+zipp==3.21.0
