--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,9 @@ executing==2.2.0
 filelock==3.17.0
 fiona==1.10.1
 fonttools==4.55.8
-fsspec==2025.2.0 
+fsspec==2025.2.0
 geopandas==0.14.3
+huggingface-hub==0.30.2
 idna==3.10
 imageio==2.37.0
 importlib_metadata==8.6.1
@@ -76,6 +77,7 @@ referencing==0.36.2
 requests==2.31.0
 rioxarray==0.15.1
 rpds-py==0.23.1
+safetensors==0.5.3
 scikit-image==0.24.0
 scipy==1.15.2
 shapely==2.0.3
@@ -89,6 +91,7 @@ stringzilla==3.12.5
 sympy==1.13.1
 tensorflow_keras==0.1
 tifffile==2025.2.18
+timm==1.0.15
 toolz==1.0.0
 torch==2.6.0
 torchvision==0.21.0
